# CppHelperLibrary

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  create-coverage-report.sh  format-all.sh  lcovrc
src/: CMakeLists.txt  ostream_indent.cpp
src/include/chl/: ostream_indent.h
tests/: CMakeLists.txt  ostream_indent.tests.cpp
